# aira-scanner

./: .env.example  AIRTABLE_SCHEMA.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SUPABASE_MIGRATION_V2.sql  SUPABASE_SCHEMA.sql  aira.html  aira_phase2.html  formula_renames.json  index.html  index_new.html  index_v1.html  package-lock.json  package.json  requirements.txt
CLI/: .gitignore  README.md  pyproject.toml
CLI/aira/: __init__.py  cli.py  deterministic_scan.py  llm.py  research.py  scanner.py
CLI/aira/checkers/: js_checker.py  python_checker.py  test_coverage_checker.py
CLI/aira_scanner.egg-info/: PKG-INFO  SOURCES.txt
CLI/scripts/: verify_aira_packaged_scan.sh
CLI/tests/: fixture_violations.py  test_cli_failure_behavior.py  test_cli_scan_validation.py  test_collector.py  test_deterministic_scan.py  test_llm_routing.py  test_research.py  test_scanner_modes.py
CLI/vscode-extension/: package.json
CLI/vscode-extension/src/: extension.js
Formula/: aira-scanner.rb  aira.rb
api/: airtable-health.js  health.js  research-health.js  research.js  scan.js  static-scan.py  supabase-health.js
docs/: AIRA_CHECKS.md  EVOLUTION.md  METHODOLOGY.md  PUBLIC_DATA_COLLECTION.md
docs/examples/: public-collection.yaml
lib/: airtable.js  llm.js  research-schema-v2.js  research-store.js  speed-insights.js  supabase.js
scripts/: update_homebrew_formula.py
